--- a/src/app/tesla-stats/tesla-stats.component.html
+++ b/src/app/tesla-stats/tesla-stats.component.html
@@ -1,3 +1,8 @@
-<p>
-  tesla-stats works!
-</p>
+<div class="tesla-stats">
+  <ul>
+    <li *ngFor="let stat of stats">
+      <div class="tesla-stats-icon tesla-stats-icon--{{ stat.model | lowercase }}"></div>
+      <p>{{ stat.miles }}</p>
+    </li>
+  </ul>
+</div>
